# workflow-builder

./: CLAUDE.md  README.md  action_catalogue.json  docker-compose.yml  email_processing_action_catalogue.json  main.py  pyproject.toml  sam_action_catalogue.json  start-local.sh
backend/: .env  .env.example  Dockerfile  README.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bc140b107bd2_add_conversation_sessions_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth.py  (+5 more)
backend/app/core/: config.py  database.py  security.py  seed_data.py
backend/app/models/: __init__.py  action.py  conversation.py  execution.py  workflow.py
backend/app/schemas/: action.py  auth.py  chat.py  execution.py  gmail_s3_action.py  workflow.py
backend/app/services/: action_service_client.py  azure_llm_service.py  gmail_client.py  s3_client.py  temporal_service.py  workflow_agent.py
backend/app/temporal_workflows/: activities.py  dynamic_workflow.py  worker.py
backend/app/utils/: validation.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActionLibrary.tsx  ActionNode.tsx  ChatFAB.tsx  ChatPanel.tsx  ConfigPanel.tsx  NodeQuickEdit.tsx
frontend/src/data/: parameterTemplates.ts
frontend/src/hooks/: useWorkflowHistory.ts
frontend/src/pages/: ExecutionList.tsx  Login.tsx  WorkflowCanvas.tsx  WorkflowList.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: workflow.types.ts
