[project]
name = "workflow-builder"
version = "0.1.0"
description = "Workflow Builder for creating automated logistics workflows using AI Agent Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "temporalio>=1.5.1",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "simpleeval>=0.9.13",
    "python-dateutil>=2.8.2",
    "greenlet>=3.2.4",
    "openai>=1.54.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]
